tests/negative/runtime/arrayremove_out_of_bounds/input.ci
void main() {
    int[] values = [1, 2, 3];
    arrayRemove(values, 5);
}
